fixed vertical alignment error

--- a/css/main.css
+++ b/css/main.css
@@ -96,14 +96,11 @@ body, html {
 
 .card-content{
   padding: 20px;
-  /* border-radius: 0px 0px 10px 10px; */
-	display: inline-block;
-
+	display: inline-grid;
 }
 
 .card-content div{
 	display: block;
-	
 }
 
 .card-content img{
